--- a/sass/layout/_nav-links.scss
+++ b/sass/layout/_nav-links.scss
@@ -45,7 +45,7 @@
       content: "";
       position: absolute;
       right: 0;
-      bottom: 0;
+      bottom: -1px;
       left: 0;
       height: 4px;
       border-radius: 2px;
